versions/v2.9/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc
= Creating Persistent Storage in Amazon's EBS
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-clusters/provisioning-storage-examples/persistent-storage-in-amazon-ebs.adoc 
:product-path: cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc

This section describes how to set up Amazon's Elastic Block Store in EC2.

. From the EC2 console, go to the *ELASTIC BLOCK STORE* section in the left panel and click *Volumes*.
. Click *Create Volume*.
. Optional: Configure the size of the volume or other options. The volume should be created in the same availability zone as the instance it will be attached to.
. Click *Create Volume*.
. Click *Close*.

*Result:* Persistent storage has been created.

For details on how to set up the newly created storage in Rancher, refer to the section on xref:cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc[setting up existing storage.]
